--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -38,6 +38,8 @@
 \usepackage[T1]{fontenc} % Required for accented characters
 \linespread{1.05} % Change line spacing here, Palatino benefits from a slight increase by default
 \usepackage{float}
+\usepackage[backend=bibtex,style=numeric]{biblatex}
+\addbibresource{references.bib} % Nome do arquivo de referências
 \makeatletter
 \renewcommand\@biblabel[1]{\textbf{#1.}} % Change the square brackets for each bibliography item from '[1]' to '1.'
 \renewcommand{\@listI}{\itemsep=0pt} % Reduce the space between items in the itemize and enumerate environments and the bibliography
@@ -874,32 +876,47 @@ O processo de aluguer inicia-se quando um cliente está interessado em alugar um
 %------------------------------------------------
 \newpage
 \clearpage
-\section*{Design UI}
+\section{Design UI}
+A interface do utilizador (UI) da plataforma foi concebida para proporcionar uma experiência visual agradável e coerente, garantindo uma navegação intuitiva e acessível. Os mockups desenvolvidos ilustram o design das páginas, incluindo a organização dos elementos, a paleta de cores, a tipografia e os componentes interativos.
 
-A plataforma pr
+Para consulta detalhada dos mockups e da estrutura visual da plataforma, estes estão disponíveis numa pasta anexada a este relatório.
 
-%------------------------------------------------
-\newpage
-\section*{Data da sprint Beta}
-
-A plataforma pr
 
 %------------------------------------------------
 \newpage
-\section*{Conclusion}
+\section{\textit{Milestones}}
+O desenvolvimento da plataforma seguirá uma abordagem faseada, garantindo um planeamento estruturado e entregas progressivas ao longo do processo. Para assegurar um acompanhamento claro do progresso, foram definidos marcos essenciais que representam as principais fases do projeto.
+
+\subsection{Planeamento e Entregas}
+
+As etapas-chave do desenvolvimento e as respetivas datas de entrega são as seguintes:
+
+\begin{itemize}
+	\item \textbf{Entrega da Especificação} \textit{(9 de março de 2025)} – Nesta fase, será elaborado e entregue o documento de especificação do projeto, contendo a definição dos requisitos funcionais e não funcionais, bem como a arquitetura do sistema e os principais diagramas UML.
+	
+	\item \textbf{Fase \textit{Alpha}} \textit{(6 de abril de 2025)} – Esta versão irá corresponder ao primeiro protótipo funcional da aplicação. O foco está em seguir a arquitetura e integrar os principais componentes.
+	
+	\item \textbf{Versão \textit{Beta}} \textit{(20 de abril de 2025)} – Com base no feedback da fase Alpha, esta versão tem como objetivo incorporar melhorias gerais da aplicação. Além disso, serão realizados testes mais aprofundados, abrangendo diferentes cenários de utilização para garantir estabilidade e usabilidade.
+	
+	\item \textbf{Versão RTW (\textit{Ready to Web})} \textit{(11 de maio de 2025)} – Esta versão representará a aplicação finalizada, pronta para disponibilização ao público. Nesta fase, serão concluídas as últimas correções, ajustes de funcionalidades e serão realizadas as validações finais para assegurar a conformidade com os objetivos do projeto.
+\end{itemize}
+
+A definição destes marcos permitirá uma gestão eficiente do desenvolvimento, garantindo que cada etapa seja devidamente planeada, implementada e validada antes do avanço para a fase seguinte.
+
+%------------------------------------------------
+\newpage
+\section{Conclusão}
 
 A plataforma proposta tem como objetivo criar um ambiente seguro e eficiente para a troca, venda e empréstimo de produtos dentro de uma comunidade. Ao permitir a marcação de encontros para a realização das transações, o projeto fomenta a interação entre os membros e incentiva práticas de consumo consciente. 
 Com a definição clara dos requisitos e o suporte de diagramas UML e mockups, este relatório serve como um guia para o desenvolvimento da solução, garantindo que todos os aspectos essenciais sejam considerados.
 
-
+\newpage
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
-\bibliographystyle{unsrt}
 
-\bibliography{sample}
-
+\printbibliography
 %----------------------------------------------------------------------------------------
 
 \end{document}
