Colocação do mockup
Colocação do mockup da aplicação no relatorio

--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -910,6 +910,13 @@ A interface do utilizador (UI) da plataforma foi concebida para proporcionar uma
 Para consulta detalhada dos mockups e da estrutura visual da plataforma, estes estão disponíveis numa pasta anexada a este relatório.
 
 
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=\textwidth]{../images/mockup-laptop.png}
+	\caption{Mockup da aplicação}
+	\label{fig:mockup}
+\end{figure}
 %------------------------------------------------
 \newpage
 \section{\textit{Milestones}}
@@ -937,13 +944,11 @@ A definição destes marcos permitirá uma gestão eficiente do desenvolvimento,
 
 A plataforma proposta tem como objetivo criar um ambiente seguro e eficiente para a troca, venda e empréstimo de produtos dentro de uma comunidade. Ao permitir a marcação de encontros para a realização das transações, o projeto fomenta a interação entre os membros e incentiva práticas de consumo consciente. 
 Com a definição clara dos requisitos e o suporte de diagramas UML e mockups, este relatório serve como um guia para o desenvolvimento da solução, garantindo que todos os aspectos essenciais sejam considerados.
-
 \newpage
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
-
-
+\nocite{*}
 \printbibliography
 %----------------------------------------------------------------------------------------
 
