--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -108,11 +108,17 @@
 %----------------------------------------------------------------------------------------
 
 \newpage
-\renewcommand{\contentsname}{Indice}
+\renewcommand{\contentsname}{Índice}
 \tableofcontents
+
+%------------------------------------------------------------------------------------
+
 \newpage
 \renewcommand{\listfigurename}{Lista de Figuras}
 \listoffigures
+
+%------------------------------------------------------------------------------------
+
 \newpage
 \section{Introdução}
 
@@ -120,25 +126,15 @@ A \textit{Vizzy} é uma plataforma comunitária desenvolvida para facilitar a co
 
 Através da \textit{Vizzy}, os utilizadores podem adquirir produtos em segunda mão, trocar itens ou até alugar ferramentas, entre outras coisas. Isto não só reduz o desperdício, como também oferece uma alternativa mais acessível, especialmente quando se trata de alugueres. Alugar uma máquina a um vizinho, por exemplo, pode ser muito mais económico do que comprá-la.
 
+\subsection{Objetivo}
 O objetivo da plataforma é criar uma rede de partilha dentro de uma comunidade, onde os membros possam beneficiar de um consumo mais consciente, poupando dinheiro e recursos, enquanto promovem a sustentabilidade e a cooperação.
 
 Neste relatório, serão apresentados os principais detalhes da aplicação, incluindo diagramas UML e \textit{mockups}, que ilustram as funcionalidades essenciais da \textit{Vizzy}.
-\subsection{Links Úteis}
 
-Os seguintes \textit{links} contêm informações relevantes sobre o projeto:
+\subsection{Gestão do Projeto}
+O \textit{Product Backlog}, as \textit{Sprints} e as \textit{Issues} podem ser consultados através do \href{https://ipcapt-my.sharepoint.com/:x:/g/personal/nfr\_ipca\_pt/Eb29k3z-aWRGisXGIZopL6IBy5l5QZjY8SjG1iWQDl6c7w?rtime=jE\_b04Za3Ug}{\textbf{Documento Excel}} ou do \href{https://basigraphics.atlassian.net/jira/software/projects/VIZZY/boards/1/backlog?epics=visible&atlOrigin=eyJpIjoiOGNmZTQ2MDRmNjQ1NDY0NDgwNDk0MDJiMGM0MDdlZWYiLCJwIjoiaiJ9}{\textbf{Jira Board}}. O código-fonte do projeto está disponível no \href{https://github.com/Basiiii/Vizzy}{\textbf{Repositório GitHub}}.
 
-\begin{itemize}
-	\item \textbf{Product Backlog}:
-	\begin{itemize}
-		\item [ ] \href{https://ipcapt-my.sharepoint.com/:x:/g/personal/nfr\_ipca\_pt/Eb29k3z-aWRGisXGIZopL6IBy5l5QZjY8SjG1iWQDl6c7w?rtime=jE\_b04Za3Ug}{\textbf{\textit{Excel}}}
-		\item [ ] \href{https://basigraphics.atlassian.net/jira/software/projects/VIZZY/boards/1/backlog?epics=visible&atlOrigin=eyJpIjoiOGNmZTQ2MDRmNjQ1NDY0NDgwNDk0MDJiMGM0MDdlZWYiLCJwIjoiaiJ9}{\textbf{\textit{Jira}}}
-	\end{itemize}
-	\item \textbf{Código-fonte}:
-	\begin{itemize}
-		\item [ ] \href{https://github.com/Basiiii/Vizzy}{\textbf{\textit{Repositório no GitHub}}}
-	\end{itemize}
-\end{itemize}
-
+%------------------------------------------------------------------------------------
 
 \newpage
 \section{Problema e Motivação}
@@ -603,7 +599,7 @@ O diagrama representa um sistema onde os utilizadores podem comprar, vender, alu
 	\begin{itemize}
 		\item \textbf{proposal\_types} (tipo de proposta).
 		\item \textbf{proposal\_statuses} (estado da proposta).
-        \item \textbf{proposal\_images} (imagens associadas às propostas).
+		\item \textbf{proposal\_images} (imagens associadas às propostas).
 		\item Tipos específicos de propostas:
 		\begin{itemize}
 			\item \textbf{sale\_proposals} (inclui preço oferecido).
@@ -747,11 +743,16 @@ Este diagrama e organização asseguram um sistema modular, escalável e bem est
 	\label{fig:class_diagram_controllers}
 \end{figure}
 
-%------------------------------------------------
+%------------------------------------------------------------------------------------
+
 \newpage
-\section*{Diagramas de Sequência}
+\section{Diagramas de Sequência}
 
 \subsection{Processo de Venda}
+O diagrama de sequência apresentado ilustra o fluxo de interações entre os diferentes componentes do sistema no contexto do processo de venda, descrevendo a troca de mensagens e a ordem dos eventos.
+
+Neste cenário, o processo inicia-se quando o utilizador (potencial comprador) acede à aplicação e pesquisa os anúncios nos quais está interessado, desencadeando uma série de chamadas entre os controladores e modelos responsáveis pelo tratamento da informação. A proposta é registada e armazenada na base de dados (PostgreSQL, através do Supabase), podendo posteriormente ser consultada e processada pelo utilizador. Caso a proposta seja aceite, o sistema procede à criação da transação e à atualização do estado do anúncio, concluindo a venda.
+
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{../images/sequence-diagram-sale.png}
@@ -759,11 +760,9 @@ Este diagrama e organização asseguram um sistema modular, escalável e bem est
 	\label{fig:diagrama_sequencia_venda}
 \end{figure}
 
-O diagrama de sequência apresentado ilustra o fluxo de interações entre os diferentes componentes do sistema no contexto do processo de venda, descrevendo a troca de mensagens e a ordem dos eventos.
-
-Neste cenário, o processo inicia-se quando o utilizador (potencial comprador) acede à aplicação e pesquisa os anúncios nos quais está interessado, desencadeando uma série de chamadas entre os controladores e modelos responsáveis pelo tratamento da informação. A proposta é registada e armazenada na base de dados (PostgreSQL, através do Supabase), podendo posteriormente ser consultada e processada pelo utilizador. Caso a proposta seja aceite, o sistema procede à criação da transação e à atualização do estado do anúncio, concluindo a venda.
-
 \subsection{Processo de Troca}
+O diagrama de sequência apresentado descreve o fluxo de interações entre os diferentes controladores e modelos envolvidos no processo de troca de produtos. Inicialmente, o utilizador visualiza os anúncios disponíveis, mostrados pelo \textit{ProductListingsController}. Posteriormente, o utilizador pode criar uma proposta de troca, que é submetida e guardada no sistema pelo \textit{ProposalsController}, que por sua vez comunica com o \textit{ProposalsModel}. As propostas recebidas podem ser visualizadas e, caso sejam aceites, o estado da proposta é atualizado. Uma vez aceite a proposta, é iniciada uma transação através do \textit{TransactionsController}, sendo registada e concluída a troca entre os utilizadores. Por fim, o estado do anúncio e da proposta são atualizados para refletir a conclusão da transação, e os contactos dos utilizadores envolvidos são disponibilizados para facilitar a comunicação entre ambos.
+
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{../images/sequence-diagram-swap.png}
@@ -771,16 +770,7 @@ Neste cenário, o processo inicia-se quando o utilizador (potencial comprador) a
 	\label{fig:diagrama_sequencia_troca}
 \end{figure}
 
-O diagrama de sequência apresentado descreve o fluxo de interações entre os diferentes controladores e modelos envolvidos no processo de troca de produtos. Inicialmente, o utilizador visualiza os anúncios disponíveis, mostrados pelo \textit{ProductListingsController}. Posteriormente, o utilizador pode criar uma proposta de troca, que é submetida e guardada no sistema pelo \textit{ProposalsController}, que por sua vez comunica com o \textit{ProposalsModel}. As propostas recebidas podem ser visualizadas e, caso sejam aceites, o estado da proposta é atualizado. Uma vez aceite a proposta, é iniciada uma transação através do \textit{TransactionsController}, sendo registada e concluída a troca entre os utilizadores. Por fim, o estado do anúncio e da proposta são atualizados para refletir a conclusão da transação, e os contactos dos utilizadores envolvidos são disponibilizados para facilitar a comunicação entre ambos.
-
 \subsection{Processo de Aluguer}
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=\textwidth]{../images/sequence-diagram-rental.png}
-	\caption{Diagrama de Sequência do Processo de Aluguer}
-	\label{fig:diagrama_sequencia_aluguer}
-\end{figure}
-
 O processo de aluguer inicia-se quando o utilizador vai aos anúncios disponíveis e cria uma proposta, que é submetida e armazenada na base de dados.
 
 Após o envio da proposta, o sistema recupera as propostas recebidas e apresenta-as ao proprietário do anúncio. Caso o proprietário aceite a proposta, o estado da mesma é atualizado e uma transação é criada através do \textit{TransactionsController}. Esta é então processada e dada como concluída.
@@ -788,6 +778,13 @@ Após o envio da proposta, o sistema recupera as propostas recebidas e apresenta
 Além disso, os dados do anúncio são atualizados para refletir a alteração no estado de disponibilidade do produto. Os utilizadores podem posteriormente visualizar o estado das suas propostas e, caso necessário, aceder aos contactos da outra parte envolvida no aluguer, disponibilizados pelo \textit{ContactsController}.
 
 Este processo assegura que o aluguer ocorre de forma controlada e registada, garantindo que tanto o proprietário quanto o cliente tenham acesso a informações relevantes durante toda a transação.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=\textwidth]{../images/sequence-diagram-rental.png}
+	\caption{Diagrama de Sequência do Processo de Aluguer}
+	\label{fig:diagrama_sequencia_aluguer}
+\end{figure}
 
 %------------------------------------------------
 \newpage
@@ -902,6 +899,7 @@ O processo de aluguer inicia-se quando um cliente está interessado em alugar um
 \end{figure}
 
 %------------------------------------------------
+
 \newpage
 \clearpage
 \section{Design UI}
@@ -909,15 +907,15 @@ A interface do utilizador (UI) da plataforma foi concebida para proporcionar uma
 
 Para consulta detalhada dos mockups e da estrutura visual da plataforma, estes estão disponíveis numa pasta anexada a este relatório.
 
-
-
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{../images/mockup-laptop.png}
 	\caption{Mockup da aplicação}
 	\label{fig:mockup}
 \end{figure}
+
 %------------------------------------------------
+
 \newpage
 \section{\textit{Milestones}}
 O desenvolvimento da plataforma seguirá uma abordagem faseada, garantindo um planeamento estruturado e entregas progressivas ao longo do processo. Para assegurar um acompanhamento claro do progresso, foram definidos marcos essenciais que representam as principais fases do projeto.
@@ -944,11 +942,13 @@ A definição destes marcos permitirá uma gestão eficiente do desenvolvimento,
 
 A plataforma proposta tem como objetivo criar um ambiente seguro e eficiente para a troca, venda e empréstimo de produtos dentro de uma comunidade. Ao permitir a marcação de encontros para a realização das transações, o projeto fomenta a interação entre os membros e incentiva práticas de consumo consciente. 
 Com a definição clara dos requisitos e o suporte de diagramas UML e mockups, este relatório serve como um guia para o desenvolvimento da solução, garantindo que todos os aspectos essenciais sejam considerados.
+
 \newpage
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 \nocite{*}
+
 \printbibliography
 %----------------------------------------------------------------------------------------
 
