Correção do diagrama ER no relatório
Correção da imagem do diagrama ER no relatório

--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -537,7 +537,7 @@ A tabela de \textbf{\textit{product\_listing}} terá os atributos que serão com
 Num anúncio também poderão estar associados imagens do produto e a sua categoria. Para além disso também teremos o estado do anúncio.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, height=11cm]{../images/entity-relationship-diagram-listings.png}
+	\includegraphics[height=11cm]{../images/entity-relationship-diagram-listings.png}
 	\caption{Diagrama ER - Anúncios}
 	\label{fig:ER Listings}
 \end{figure}
